--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -1,5 +1,7 @@
 error.name = name must be more than 3 characters
 error.price = price should be greater then 1000
+form.product.name=Product Name
+form.product.price=Product Price
 index.page.home = Home 
 product.add=Add your product
 
