--- a/src/main/resources/message_fa.properties
+++ b/src/main/resources/message_fa.properties
@@ -4,3 +4,20 @@ form.product.name=\u0646\u0627\u0645 \u0645\u062D\u0635\u0648\u0644
 form.product.price=\u0642\u06CC\u0645\u062A \u0645\u062D\u0635\u0648\u0644
 index.page.home = \u062E\u0627\u0646\u0647
 product.add=\u0645\u062D\u0635\u0648\u0644 \u062E\u0648\u062F \u0631\u0627 \u0627\u0636\u0627\u0641\u0647 \u06A9\u0646\u06CC\u062F
+
+home.page=Home
+product.page=Products
+about.page=About
+contact.page=Contact
+updateAccount.page=Update Account
+logout.page=Logout
+cart.page=Cart
+admin.page=Admin
+login.page=Login
+register.page=Register
+
+
+Size = {0} must be between between {2} and {1} character long
+
+NotEmpty.customer.customerName = Name can not be blank
+Size.customer.customerName=Name must be between {2} and {1} character long
